kubernetes/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-ideas-client
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: eco-ideas-client
  template:
    metadata:
      labels:
        app: eco-ideas-client
    spec:
      containers:
        - name: eco-ideas-client
          image: gcr.io/eco-ideas/client:latest
          resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "100m"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 8
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 3
