kubernetes/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-ideas-server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: eco-ideas-server
  template:
    metadata:
      labels:
        app: eco-ideas-server
    spec:
      containers:
        - name: eco-ideas-server
          image: gcr.io/eco-ideas/server:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/ideas
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 8
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/ideas
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
