kubernetes/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: eco-ideas-client
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: NodePort
