kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: eco-ideas-server
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  type: LoadBalancer
